# unifi-voucher-manager

./: .dockerignore  Dockerfile  LICENSE  README.md  compose.yaml  release_docker.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release_docker.yaml
backend/: .dockerignore  Cargo.toml
backend/src/: handlers.rs  lib.rs  main.rs  models.rs  unifi_api.rs
frontend/: .dockerignore  README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/print/: page.tsx  styles.css
frontend/src/components/: Header.tsx  VoucherCard.tsx
frontend/src/components/modals/: Modal.tsx  SuccessModal.tsx  VoucherModal.tsx  WifiQrModal.tsx
frontend/src/components/notifications/: NotificationContainer.tsx  NotificationItem.tsx
frontend/src/components/tabs/: CustomCreateTab.tsx  QuickCreateTab.tsx  Tabs.tsx  TestTab.tsx  VouchersTab.tsx
frontend/src/components/utils/: CopyCode.tsx  RenderInWindow.tsx  Spinner.tsx  ThemeSwitcher.tsx  VoucherCode.tsx  VoucherPrintContent.tsx
frontend/src/contexts/: GlobalContext.tsx
frontend/src/types/: runtime.ts  voucher.ts
frontend/src/utils/: api.ts  clipboard.ts  format.ts  functional.ts  notifications.ts  runtimeConfig.ts  wifi.ts
scripts/: entrypoint.sh  healthcheck.sh  run_wrapper.sh
